K8S Config/ms-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-ms-front
spec:
  selector:
    name: deployment-ms-front
  ports:
    - port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-ms-front
spec:
  replicas: 1
  selector:
    matchLabels:
      name: deployment-ms-front
  template:
    metadata:
      labels:
        name: deployment-ms-front
    spec:
      containers:
      - name: ms-front
        image: gabrielbessadev/ms-front:1.0.11
        ports:
        - containerPort: 80
