K8S Config/ms-trade.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-ms-trade
spec:
  selector:
    name: deployment-ms-trade
  ports:
    - port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-ms-trade
spec:
  replicas: 1
  selector:
    matchLabels:
      name: deployment-ms-trade
  template:
    metadata:
      labels:
        name: deployment-ms-trade
    spec:
      containers:
        - name: ms-trade
          image: gabrielbessadev/ms-trade:1.1.21
          ports:
            - containerPort: 8080
