K8S Config/ms-websocket.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-ms-websocket
spec:
  selector:
    name: deployment-ms-websocket
  ports:
    - port: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-ms-websocket
spec:
  replicas: 1
  selector:
    matchLabels:
      name: deployment-ms-websocket
  template:
    metadata:
      labels:
        name: deployment-ms-websocket
    spec:
      containers:
        - name: ms-websocket
          image: gabrielbessadev/ms-websocket:1.0.10
          ports:
            - containerPort: 8081
