K8S Config/ingress.yaml
# apiVersion: networking.k8s.io/v1beta1 # for k3s < v1.19
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/chat
        pathType: Prefix
        backend:
          service:
            name: service-ms-websocket
            port:
              number: 8081
      - path: /api/trade
        pathType: Prefix
        backend:
          service:
            name: service-ms-trade
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-ms-front
            port:
              number: 80
